# wallet

./: .dockerignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.docker/images/dev/: Dockerfile
.docker/images/prod/: Dockerfile
migrations/models/: 0_20220306093825_init.sql  1_20220312194507_user_and_password_models.sql  2_20220312223513_rename_pwd_col.sql  3_20220312230634_enrypted_password_type_change.sql  4_20220312234437_user_pwd_255.sql
tests/: conftest.py  test_app.py
wallet/: app.py  settings.py
wallet/api/: errors.py  tags_metadata.py
wallet/api/views/: __init__.py  auth.py  password.py  user.py
wallet/database/: models.py
wallet/serializers/: password.py  token.py  user.py
wallet/utils/: security.py
